// Code generated by protoc-gen-go. DO NOT EDIT.
// versions:
// 	protoc-gen-go v1.31.0
// 	protoc        (unknown)
// source: proto/meals/v1/meals.proto

package mealsv1

import (
	protoreflect "google.golang.org/protobuf/reflect/protoreflect"
	protoimpl "google.golang.org/protobuf/runtime/protoimpl"
	timestamppb "google.golang.org/protobuf/types/known/timestamppb"
	reflect "reflect"
	sync "sync"
)

const (
	// Verify that this generated code is sufficiently up-to-date.
	_ = protoimpl.EnforceVersion(20 - protoimpl.MinVersion)
	// Verify that runtime/protoimpl is sufficiently up-to-date.
	_ = protoimpl.EnforceVersion(protoimpl.MaxVersion - 20)
)

type GetMealsRequest struct {
	state         protoimpl.MessageState
	sizeCache     protoimpl.SizeCache
	unknownFields protoimpl.UnknownFields
}

func (x *GetMealsRequest) Reset() {
	*x = GetMealsRequest{}
	if protoimpl.UnsafeEnabled {
		mi := &file_proto_meals_v1_meals_proto_msgTypes[0]
		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
		ms.StoreMessageInfo(mi)
	}
}

func (x *GetMealsRequest) String() string {
	return protoimpl.X.MessageStringOf(x)
}

func (*GetMealsRequest) ProtoMessage() {}

func (x *GetMealsRequest) ProtoReflect() protoreflect.Message {
	mi := &file_proto_meals_v1_meals_proto_msgTypes[0]
	if protoimpl.UnsafeEnabled && x != nil {
		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
		if ms.LoadMessageInfo() == nil {
			ms.StoreMessageInfo(mi)
		}
		return ms
	}
	return mi.MessageOf(x)
}

// Deprecated: Use GetMealsRequest.ProtoReflect.Descriptor instead.
func (*GetMealsRequest) Descriptor() ([]byte, []int) {
	return file_proto_meals_v1_meals_proto_rawDescGZIP(), []int{0}
}

type GetMealsResponse struct {
	state         protoimpl.MessageState
	sizeCache     protoimpl.SizeCache
	unknownFields protoimpl.UnknownFields

	Meals []*Meal `protobuf:"bytes,1,rep,name=meals,proto3" json:"meals,omitempty"`
}

func (x *GetMealsResponse) Reset() {
	*x = GetMealsResponse{}
	if protoimpl.UnsafeEnabled {
		mi := &file_proto_meals_v1_meals_proto_msgTypes[1]
		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
		ms.StoreMessageInfo(mi)
	}
}

func (x *GetMealsResponse) String() string {
	return protoimpl.X.MessageStringOf(x)
}

func (*GetMealsResponse) ProtoMessage() {}

func (x *GetMealsResponse) ProtoReflect() protoreflect.Message {
	mi := &file_proto_meals_v1_meals_proto_msgTypes[1]
	if protoimpl.UnsafeEnabled && x != nil {
		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
		if ms.LoadMessageInfo() == nil {
			ms.StoreMessageInfo(mi)
		}
		return ms
	}
	return mi.MessageOf(x)
}

// Deprecated: Use GetMealsResponse.ProtoReflect.Descriptor instead.
func (*GetMealsResponse) Descriptor() ([]byte, []int) {
	return file_proto_meals_v1_meals_proto_rawDescGZIP(), []int{1}
}

func (x *GetMealsResponse) GetMeals() []*Meal {
	if x != nil {
		return x.Meals
	}
	return nil
}

type CreateMealRequest struct {
	state         protoimpl.MessageState
	sizeCache     protoimpl.SizeCache
	unknownFields protoimpl.UnknownFields

	Name string `protobuf:"bytes,1,opt,name=name,proto3" json:"name,omitempty"`
}

func (x *CreateMealRequest) Reset() {
	*x = CreateMealRequest{}
	if protoimpl.UnsafeEnabled {
		mi := &file_proto_meals_v1_meals_proto_msgTypes[2]
		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
		ms.StoreMessageInfo(mi)
	}
}

func (x *CreateMealRequest) String() string {
	return protoimpl.X.MessageStringOf(x)
}

func (*CreateMealRequest) ProtoMessage() {}

func (x *CreateMealRequest) ProtoReflect() protoreflect.Message {
	mi := &file_proto_meals_v1_meals_proto_msgTypes[2]
	if protoimpl.UnsafeEnabled && x != nil {
		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
		if ms.LoadMessageInfo() == nil {
			ms.StoreMessageInfo(mi)
		}
		return ms
	}
	return mi.MessageOf(x)
}

// Deprecated: Use CreateMealRequest.ProtoReflect.Descriptor instead.
func (*CreateMealRequest) Descriptor() ([]byte, []int) {
	return file_proto_meals_v1_meals_proto_rawDescGZIP(), []int{2}
}

func (x *CreateMealRequest) GetName() string {
	if x != nil {
		return x.Name
	}
	return ""
}

type CreateMealResponse struct {
	state         protoimpl.MessageState
	sizeCache     protoimpl.SizeCache
	unknownFields protoimpl.UnknownFields

	Meal *Meal `protobuf:"bytes,1,opt,name=meal,proto3" json:"meal,omitempty"`
}

func (x *CreateMealResponse) Reset() {
	*x = CreateMealResponse{}
	if protoimpl.UnsafeEnabled {
		mi := &file_proto_meals_v1_meals_proto_msgTypes[3]
		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
		ms.StoreMessageInfo(mi)
	}
}

func (x *CreateMealResponse) String() string {
	return protoimpl.X.MessageStringOf(x)
}

func (*CreateMealResponse) ProtoMessage() {}

func (x *CreateMealResponse) ProtoReflect() protoreflect.Message {
	mi := &file_proto_meals_v1_meals_proto_msgTypes[3]
	if protoimpl.UnsafeEnabled && x != nil {
		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
		if ms.LoadMessageInfo() == nil {
			ms.StoreMessageInfo(mi)
		}
		return ms
	}
	return mi.MessageOf(x)
}

// Deprecated: Use CreateMealResponse.ProtoReflect.Descriptor instead.
func (*CreateMealResponse) Descriptor() ([]byte, []int) {
	return file_proto_meals_v1_meals_proto_rawDescGZIP(), []int{3}
}

func (x *CreateMealResponse) GetMeal() *Meal {
	if x != nil {
		return x.Meal
	}
	return nil
}

type DeleteMealRequest struct {
	state         protoimpl.MessageState
	sizeCache     protoimpl.SizeCache
	unknownFields protoimpl.UnknownFields

	Name string `protobuf:"bytes,1,opt,name=name,proto3" json:"name,omitempty"`
}

func (x *DeleteMealRequest) Reset() {
	*x = DeleteMealRequest{}
	if protoimpl.UnsafeEnabled {
		mi := &file_proto_meals_v1_meals_proto_msgTypes[4]
		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
		ms.StoreMessageInfo(mi)
	}
}

func (x *DeleteMealRequest) String() string {
	return protoimpl.X.MessageStringOf(x)
}

func (*DeleteMealRequest) ProtoMessage() {}

func (x *DeleteMealRequest) ProtoReflect() protoreflect.Message {
	mi := &file_proto_meals_v1_meals_proto_msgTypes[4]
	if protoimpl.UnsafeEnabled && x != nil {
		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
		if ms.LoadMessageInfo() == nil {
			ms.StoreMessageInfo(mi)
		}
		return ms
	}
	return mi.MessageOf(x)
}

// Deprecated: Use DeleteMealRequest.ProtoReflect.Descriptor instead.
func (*DeleteMealRequest) Descriptor() ([]byte, []int) {
	return file_proto_meals_v1_meals_proto_rawDescGZIP(), []int{4}
}

func (x *DeleteMealRequest) GetName() string {
	if x != nil {
		return x.Name
	}
	return ""
}

type DeleteMealResponse struct {
	state         protoimpl.MessageState
	sizeCache     protoimpl.SizeCache
	unknownFields protoimpl.UnknownFields
}

func (x *DeleteMealResponse) Reset() {
	*x = DeleteMealResponse{}
	if protoimpl.UnsafeEnabled {
		mi := &file_proto_meals_v1_meals_proto_msgTypes[5]
		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
		ms.StoreMessageInfo(mi)
	}
}

func (x *DeleteMealResponse) String() string {
	return protoimpl.X.MessageStringOf(x)
}

func (*DeleteMealResponse) ProtoMessage() {}

func (x *DeleteMealResponse) ProtoReflect() protoreflect.Message {
	mi := &file_proto_meals_v1_meals_proto_msgTypes[5]
	if protoimpl.UnsafeEnabled && x != nil {
		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
		if ms.LoadMessageInfo() == nil {
			ms.StoreMessageInfo(mi)
		}
		return ms
	}
	return mi.MessageOf(x)
}

// Deprecated: Use DeleteMealResponse.ProtoReflect.Descriptor instead.
func (*DeleteMealResponse) Descriptor() ([]byte, []int) {
	return file_proto_meals_v1_meals_proto_rawDescGZIP(), []int{5}
}

type Meal struct {
	state         protoimpl.MessageState
	sizeCache     protoimpl.SizeCache
	unknownFields protoimpl.UnknownFields

	Id        int64  `protobuf:"varint,1,opt,name=id,proto3" json:"id,omitempty"`
	Name      string `protobuf:"bytes,2,opt,name=name,proto3" json:"name,omitempty"`
	CreatedBy string `protobuf:"bytes,3,opt,name=created_by,json=createdBy,proto3" json:"created_by,omitempty"`
}

func (x *Meal) Reset() {
	*x = Meal{}
	if protoimpl.UnsafeEnabled {
		mi := &file_proto_meals_v1_meals_proto_msgTypes[6]
		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
		ms.StoreMessageInfo(mi)
	}
}

func (x *Meal) String() string {
	return protoimpl.X.MessageStringOf(x)
}

func (*Meal) ProtoMessage() {}

func (x *Meal) ProtoReflect() protoreflect.Message {
	mi := &file_proto_meals_v1_meals_proto_msgTypes[6]
	if protoimpl.UnsafeEnabled && x != nil {
		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
		if ms.LoadMessageInfo() == nil {
			ms.StoreMessageInfo(mi)
		}
		return ms
	}
	return mi.MessageOf(x)
}

// Deprecated: Use Meal.ProtoReflect.Descriptor instead.
func (*Meal) Descriptor() ([]byte, []int) {
	return file_proto_meals_v1_meals_proto_rawDescGZIP(), []int{6}
}

func (x *Meal) GetId() int64 {
	if x != nil {
		return x.Id
	}
	return 0
}

func (x *Meal) GetName() string {
	if x != nil {
		return x.Name
	}
	return ""
}

func (x *Meal) GetCreatedBy() string {
	if x != nil {
		return x.CreatedBy
	}
	return ""
}

type GetPlannedMealsRequest struct {
	state         protoimpl.MessageState
	sizeCache     protoimpl.SizeCache
	unknownFields protoimpl.UnknownFields

	From *timestamppb.Timestamp `protobuf:"bytes,1,opt,name=from,proto3" json:"from,omitempty"`
	To   *timestamppb.Timestamp `protobuf:"bytes,2,opt,name=to,proto3" json:"to,omitempty"`
}

func (x *GetPlannedMealsRequest) Reset() {
	*x = GetPlannedMealsRequest{}
	if protoimpl.UnsafeEnabled {
		mi := &file_proto_meals_v1_meals_proto_msgTypes[7]
		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
		ms.StoreMessageInfo(mi)
	}
}

func (x *GetPlannedMealsRequest) String() string {
	return protoimpl.X.MessageStringOf(x)
}

func (*GetPlannedMealsRequest) ProtoMessage() {}

func (x *GetPlannedMealsRequest) ProtoReflect() protoreflect.Message {
	mi := &file_proto_meals_v1_meals_proto_msgTypes[7]
	if protoimpl.UnsafeEnabled && x != nil {
		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
		if ms.LoadMessageInfo() == nil {
			ms.StoreMessageInfo(mi)
		}
		return ms
	}
	return mi.MessageOf(x)
}

// Deprecated: Use GetPlannedMealsRequest.ProtoReflect.Descriptor instead.
func (*GetPlannedMealsRequest) Descriptor() ([]byte, []int) {
	return file_proto_meals_v1_meals_proto_rawDescGZIP(), []int{7}
}

func (x *GetPlannedMealsRequest) GetFrom() *timestamppb.Timestamp {
	if x != nil {
		return x.From
	}
	return nil
}

func (x *GetPlannedMealsRequest) GetTo() *timestamppb.Timestamp {
	if x != nil {
		return x.To
	}
	return nil
}

type GetPlannedMealsResponse struct {
	state         protoimpl.MessageState
	sizeCache     protoimpl.SizeCache
	unknownFields protoimpl.UnknownFields

	PlannedMeals []*PlannedMeal `protobuf:"bytes,1,rep,name=plannedMeals,proto3" json:"plannedMeals,omitempty"`
}

func (x *GetPlannedMealsResponse) Reset() {
	*x = GetPlannedMealsResponse{}
	if protoimpl.UnsafeEnabled {
		mi := &file_proto_meals_v1_meals_proto_msgTypes[8]
		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
		ms.StoreMessageInfo(mi)
	}
}

func (x *GetPlannedMealsResponse) String() string {
	return protoimpl.X.MessageStringOf(x)
}

func (*GetPlannedMealsResponse) ProtoMessage() {}

func (x *GetPlannedMealsResponse) ProtoReflect() protoreflect.Message {
	mi := &file_proto_meals_v1_meals_proto_msgTypes[8]
	if protoimpl.UnsafeEnabled && x != nil {
		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
		if ms.LoadMessageInfo() == nil {
			ms.StoreMessageInfo(mi)
		}
		return ms
	}
	return mi.MessageOf(x)
}

// Deprecated: Use GetPlannedMealsResponse.ProtoReflect.Descriptor instead.
func (*GetPlannedMealsResponse) Descriptor() ([]byte, []int) {
	return file_proto_meals_v1_meals_proto_rawDescGZIP(), []int{8}
}

func (x *GetPlannedMealsResponse) GetPlannedMeals() []*PlannedMeal {
	if x != nil {
		return x.PlannedMeals
	}
	return nil
}

type CreatePlannedMealRequest struct {
	state         protoimpl.MessageState
	sizeCache     protoimpl.SizeCache
	unknownFields protoimpl.UnknownFields

	MealId int64                  `protobuf:"varint,1,opt,name=mealId,proto3" json:"mealId,omitempty"`
	Date   *timestamppb.Timestamp `protobuf:"bytes,2,opt,name=date,proto3" json:"date,omitempty"`
}

func (x *CreatePlannedMealRequest) Reset() {
	*x = CreatePlannedMealRequest{}
	if protoimpl.UnsafeEnabled {
		mi := &file_proto_meals_v1_meals_proto_msgTypes[9]
		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
		ms.StoreMessageInfo(mi)
	}
}

func (x *CreatePlannedMealRequest) String() string {
	return protoimpl.X.MessageStringOf(x)
}

func (*CreatePlannedMealRequest) ProtoMessage() {}

func (x *CreatePlannedMealRequest) ProtoReflect() protoreflect.Message {
	mi := &file_proto_meals_v1_meals_proto_msgTypes[9]
	if protoimpl.UnsafeEnabled && x != nil {
		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
		if ms.LoadMessageInfo() == nil {
			ms.StoreMessageInfo(mi)
		}
		return ms
	}
	return mi.MessageOf(x)
}

// Deprecated: Use CreatePlannedMealRequest.ProtoReflect.Descriptor instead.
func (*CreatePlannedMealRequest) Descriptor() ([]byte, []int) {
	return file_proto_meals_v1_meals_proto_rawDescGZIP(), []int{9}
}

func (x *CreatePlannedMealRequest) GetMealId() int64 {
	if x != nil {
		return x.MealId
	}
	return 0
}

func (x *CreatePlannedMealRequest) GetDate() *timestamppb.Timestamp {
	if x != nil {
		return x.Date
	}
	return nil
}

type CreatePlannedMealResponse struct {
	state         protoimpl.MessageState
	sizeCache     protoimpl.SizeCache
	unknownFields protoimpl.UnknownFields

	PlannedMeal *PlannedMeal `protobuf:"bytes,1,opt,name=plannedMeal,proto3" json:"plannedMeal,omitempty"`
}

func (x *CreatePlannedMealResponse) Reset() {
	*x = CreatePlannedMealResponse{}
	if protoimpl.UnsafeEnabled {
		mi := &file_proto_meals_v1_meals_proto_msgTypes[10]
		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
		ms.StoreMessageInfo(mi)
	}
}

func (x *CreatePlannedMealResponse) String() string {
	return protoimpl.X.MessageStringOf(x)
}

func (*CreatePlannedMealResponse) ProtoMessage() {}

func (x *CreatePlannedMealResponse) ProtoReflect() protoreflect.Message {
	mi := &file_proto_meals_v1_meals_proto_msgTypes[10]
	if protoimpl.UnsafeEnabled && x != nil {
		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
		if ms.LoadMessageInfo() == nil {
			ms.StoreMessageInfo(mi)
		}
		return ms
	}
	return mi.MessageOf(x)
}

// Deprecated: Use CreatePlannedMealResponse.ProtoReflect.Descriptor instead.
func (*CreatePlannedMealResponse) Descriptor() ([]byte, []int) {
	return file_proto_meals_v1_meals_proto_rawDescGZIP(), []int{10}
}

func (x *CreatePlannedMealResponse) GetPlannedMeal() *PlannedMeal {
	if x != nil {
		return x.PlannedMeal
	}
	return nil
}

type PlannedMeal struct {
	state         protoimpl.MessageState
	sizeCache     protoimpl.SizeCache
	unknownFields protoimpl.UnknownFields

	Id   int64                  `protobuf:"varint,1,opt,name=id,proto3" json:"id,omitempty"`
	Date *timestamppb.Timestamp `protobuf:"bytes,2,opt,name=date,proto3" json:"date,omitempty"`
	Meal *Meal                  `protobuf:"bytes,3,opt,name=meal,proto3" json:"meal,omitempty"`
}

func (x *PlannedMeal) Reset() {
	*x = PlannedMeal{}
	if protoimpl.UnsafeEnabled {
		mi := &file_proto_meals_v1_meals_proto_msgTypes[11]
		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
		ms.StoreMessageInfo(mi)
	}
}

func (x *PlannedMeal) String() string {
	return protoimpl.X.MessageStringOf(x)
}

func (*PlannedMeal) ProtoMessage() {}

func (x *PlannedMeal) ProtoReflect() protoreflect.Message {
	mi := &file_proto_meals_v1_meals_proto_msgTypes[11]
	if protoimpl.UnsafeEnabled && x != nil {
		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
		if ms.LoadMessageInfo() == nil {
			ms.StoreMessageInfo(mi)
		}
		return ms
	}
	return mi.MessageOf(x)
}

// Deprecated: Use PlannedMeal.ProtoReflect.Descriptor instead.
func (*PlannedMeal) Descriptor() ([]byte, []int) {
	return file_proto_meals_v1_meals_proto_rawDescGZIP(), []int{11}
}

func (x *PlannedMeal) GetId() int64 {
	if x != nil {
		return x.Id
	}
	return 0
}

func (x *PlannedMeal) GetDate() *timestamppb.Timestamp {
	if x != nil {
		return x.Date
	}
	return nil
}

func (x *PlannedMeal) GetMeal() *Meal {
	if x != nil {
		return x.Meal
	}
	return nil
}

var File_proto_meals_v1_meals_proto protoreflect.FileDescriptor

var file_proto_meals_v1_meals_proto_rawDesc = []byte{
	0x0a, 0x1a, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x2f, 0x6d, 0x65, 0x61, 0x6c, 0x73, 0x2f, 0x76, 0x31,
	0x2f, 0x6d, 0x65, 0x61, 0x6c, 0x73, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x12, 0x08, 0x6d, 0x65,
	0x61, 0x6c, 0x73, 0x2e, 0x76, 0x31, 0x1a, 0x1f, 0x67, 0x6f, 0x6f, 0x67, 0x6c, 0x65, 0x2f, 0x70,
	0x72, 0x6f, 0x74, 0x6f, 0x62, 0x75, 0x66, 0x2f, 0x74, 0x69, 0x6d, 0x65, 0x73, 0x74, 0x61, 0x6d,
	0x70, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x22, 0x11, 0x0a, 0x0f, 0x47, 0x65, 0x74, 0x4d, 0x65,
	0x61, 0x6c, 0x73, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x22, 0x38, 0x0a, 0x10, 0x47, 0x65,
	0x74, 0x4d, 0x65, 0x61, 0x6c, 0x73, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x12, 0x24,
	0x0a, 0x05, 0x6d, 0x65, 0x61, 0x6c, 0x73, 0x18, 0x01, 0x20, 0x03, 0x28, 0x0b, 0x32, 0x0e, 0x2e,
	0x6d, 0x65, 0x61, 0x6c, 0x73, 0x2e, 0x76, 0x31, 0x2e, 0x6d, 0x65, 0x61, 0x6c, 0x52, 0x05, 0x6d,
	0x65, 0x61, 0x6c, 0x73, 0x22, 0x27, 0x0a, 0x11, 0x43, 0x72, 0x65, 0x61, 0x74, 0x65, 0x4d, 0x65,
	0x61, 0x6c, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x12, 0x12, 0x0a, 0x04, 0x6e, 0x61, 0x6d,
	0x65, 0x18, 0x01, 0x20, 0x01, 0x28, 0x09, 0x52, 0x04, 0x6e, 0x61, 0x6d, 0x65, 0x22, 0x38, 0x0a,
	0x12, 0x43, 0x72, 0x65, 0x61, 0x74, 0x65, 0x4d, 0x65, 0x61, 0x6c, 0x52, 0x65, 0x73, 0x70, 0x6f,
	0x6e, 0x73, 0x65, 0x12, 0x22, 0x0a, 0x04, 0x6d, 0x65, 0x61, 0x6c, 0x18, 0x01, 0x20, 0x01, 0x28,
	0x0b, 0x32, 0x0e, 0x2e, 0x6d, 0x65, 0x61, 0x6c, 0x73, 0x2e, 0x76, 0x31, 0x2e, 0x6d, 0x65, 0x61,
	0x6c, 0x52, 0x04, 0x6d, 0x65, 0x61, 0x6c, 0x22, 0x27, 0x0a, 0x11, 0x44, 0x65, 0x6c, 0x65, 0x74,
	0x65, 0x4d, 0x65, 0x61, 0x6c, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x12, 0x12, 0x0a, 0x04,
	0x6e, 0x61, 0x6d, 0x65, 0x18, 0x01, 0x20, 0x01, 0x28, 0x09, 0x52, 0x04, 0x6e, 0x61, 0x6d, 0x65,
	0x22, 0x14, 0x0a, 0x12, 0x44, 0x65, 0x6c, 0x65, 0x74, 0x65, 0x4d, 0x65, 0x61, 0x6c, 0x52, 0x65,
	0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x22, 0x49, 0x0a, 0x04, 0x6d, 0x65, 0x61, 0x6c, 0x12, 0x0e,
	0x0a, 0x02, 0x69, 0x64, 0x18, 0x01, 0x20, 0x01, 0x28, 0x03, 0x52, 0x02, 0x69, 0x64, 0x12, 0x12,
	0x0a, 0x04, 0x6e, 0x61, 0x6d, 0x65, 0x18, 0x02, 0x20, 0x01, 0x28, 0x09, 0x52, 0x04, 0x6e, 0x61,
	0x6d, 0x65, 0x12, 0x1d, 0x0a, 0x0a, 0x63, 0x72, 0x65, 0x61, 0x74, 0x65, 0x64, 0x5f, 0x62, 0x79,
	0x18, 0x03, 0x20, 0x01, 0x28, 0x09, 0x52, 0x09, 0x63, 0x72, 0x65, 0x61, 0x74, 0x65, 0x64, 0x42,
	0x79, 0x22, 0x74, 0x0a, 0x16, 0x47, 0x65, 0x74, 0x50, 0x6c, 0x61, 0x6e, 0x6e, 0x65, 0x64, 0x4d,
	0x65, 0x61, 0x6c, 0x73, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x12, 0x2e, 0x0a, 0x04, 0x66,
	0x72, 0x6f, 0x6d, 0x18, 0x01, 0x20, 0x01, 0x28, 0x0b, 0x32, 0x1a, 0x2e, 0x67, 0x6f, 0x6f, 0x67,
	0x6c, 0x65, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x62, 0x75, 0x66, 0x2e, 0x54, 0x69, 0x6d, 0x65,
	0x73, 0x74, 0x61, 0x6d, 0x70, 0x52, 0x04, 0x66, 0x72, 0x6f, 0x6d, 0x12, 0x2a, 0x0a, 0x02, 0x74,
	0x6f, 0x18, 0x02, 0x20, 0x01, 0x28, 0x0b, 0x32, 0x1a, 0x2e, 0x67, 0x6f, 0x6f, 0x67, 0x6c, 0x65,
	0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x62, 0x75, 0x66, 0x2e, 0x54, 0x69, 0x6d, 0x65, 0x73, 0x74,
	0x61, 0x6d, 0x70, 0x52, 0x02, 0x74, 0x6f, 0x22, 0x54, 0x0a, 0x17, 0x47, 0x65, 0x74, 0x50, 0x6c,
	0x61, 0x6e, 0x6e, 0x65, 0x64, 0x4d, 0x65, 0x61, 0x6c, 0x73, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e,
	0x73, 0x65, 0x12, 0x39, 0x0a, 0x0c, 0x70, 0x6c, 0x61, 0x6e, 0x6e, 0x65, 0x64, 0x4d, 0x65, 0x61,
	0x6c, 0x73, 0x18, 0x01, 0x20, 0x03, 0x28, 0x0b, 0x32, 0x15, 0x2e, 0x6d, 0x65, 0x61, 0x6c, 0x73,
	0x2e, 0x76, 0x31, 0x2e, 0x50, 0x6c, 0x61, 0x6e, 0x6e, 0x65, 0x64, 0x4d, 0x65, 0x61, 0x6c, 0x52,
	0x0c, 0x70, 0x6c, 0x61, 0x6e, 0x6e, 0x65, 0x64, 0x4d, 0x65, 0x61, 0x6c, 0x73, 0x22, 0x62, 0x0a,
	0x18, 0x43, 0x72, 0x65, 0x61, 0x74, 0x65, 0x50, 0x6c, 0x61, 0x6e, 0x6e, 0x65, 0x64, 0x4d, 0x65,
	0x61, 0x6c, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x12, 0x16, 0x0a, 0x06, 0x6d, 0x65, 0x61,
	0x6c, 0x49, 0x64, 0x18, 0x01, 0x20, 0x01, 0x28, 0x03, 0x52, 0x06, 0x6d, 0x65, 0x61, 0x6c, 0x49,
	0x64, 0x12, 0x2e, 0x0a, 0x04, 0x64, 0x61, 0x74, 0x65, 0x18, 0x02, 0x20, 0x01, 0x28, 0x0b, 0x32,
	0x1a, 0x2e, 0x67, 0x6f, 0x6f, 0x67, 0x6c, 0x65, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x62, 0x75,
	0x66, 0x2e, 0x54, 0x69, 0x6d, 0x65, 0x73, 0x74, 0x61, 0x6d, 0x70, 0x52, 0x04, 0x64, 0x61, 0x74,
	0x65, 0x22, 0x54, 0x0a, 0x19, 0x43, 0x72, 0x65, 0x61, 0x74, 0x65, 0x50, 0x6c, 0x61, 0x6e, 0x6e,
	0x65, 0x64, 0x4d, 0x65, 0x61, 0x6c, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x12, 0x37,
	0x0a, 0x0b, 0x70, 0x6c, 0x61, 0x6e, 0x6e, 0x65, 0x64, 0x4d, 0x65, 0x61, 0x6c, 0x18, 0x01, 0x20,
	0x01, 0x28, 0x0b, 0x32, 0x15, 0x2e, 0x6d, 0x65, 0x61, 0x6c, 0x73, 0x2e, 0x76, 0x31, 0x2e, 0x50,
	0x6c, 0x61, 0x6e, 0x6e, 0x65, 0x64, 0x4d, 0x65, 0x61, 0x6c, 0x52, 0x0b, 0x70, 0x6c, 0x61, 0x6e,
	0x6e, 0x65, 0x64, 0x4d, 0x65, 0x61, 0x6c, 0x22, 0x71, 0x0a, 0x0b, 0x50, 0x6c, 0x61, 0x6e, 0x6e,
	0x65, 0x64, 0x4d, 0x65, 0x61, 0x6c, 0x12, 0x0e, 0x0a, 0x02, 0x69, 0x64, 0x18, 0x01, 0x20, 0x01,
	0x28, 0x03, 0x52, 0x02, 0x69, 0x64, 0x12, 0x2e, 0x0a, 0x04, 0x64, 0x61, 0x74, 0x65, 0x18, 0x02,
	0x20, 0x01, 0x28, 0x0b, 0x32, 0x1a, 0x2e, 0x67, 0x6f, 0x6f, 0x67, 0x6c, 0x65, 0x2e, 0x70, 0x72,
	0x6f, 0x74, 0x6f, 0x62, 0x75, 0x66, 0x2e, 0x54, 0x69, 0x6d, 0x65, 0x73, 0x74, 0x61, 0x6d, 0x70,
	0x52, 0x04, 0x64, 0x61, 0x74, 0x65, 0x12, 0x22, 0x0a, 0x04, 0x6d, 0x65, 0x61, 0x6c, 0x18, 0x03,
	0x20, 0x01, 0x28, 0x0b, 0x32, 0x0e, 0x2e, 0x6d, 0x65, 0x61, 0x6c, 0x73, 0x2e, 0x76, 0x31, 0x2e,
	0x6d, 0x65, 0x61, 0x6c, 0x52, 0x04, 0x6d, 0x65, 0x61, 0x6c, 0x32, 0xe3, 0x01, 0x0a, 0x0c, 0x4d,
	0x65, 0x61, 0x6c, 0x73, 0x53, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x12, 0x41, 0x0a, 0x08, 0x47,
	0x65, 0x74, 0x4d, 0x65, 0x61, 0x6c, 0x73, 0x12, 0x19, 0x2e, 0x6d, 0x65, 0x61, 0x6c, 0x73, 0x2e,
	0x76, 0x31, 0x2e, 0x47, 0x65, 0x74, 0x4d, 0x65, 0x61, 0x6c, 0x73, 0x52, 0x65, 0x71, 0x75, 0x65,
	0x73, 0x74, 0x1a, 0x1a, 0x2e, 0x6d, 0x65, 0x61, 0x6c, 0x73, 0x2e, 0x76, 0x31, 0x2e, 0x47, 0x65,
	0x74, 0x4d, 0x65, 0x61, 0x6c, 0x73, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x12, 0x47,
	0x0a, 0x0a, 0x43, 0x72, 0x65, 0x61, 0x74, 0x65, 0x4d, 0x65, 0x61, 0x6c, 0x12, 0x1b, 0x2e, 0x6d,
	0x65, 0x61, 0x6c, 0x73, 0x2e, 0x76, 0x31, 0x2e, 0x43, 0x72, 0x65, 0x61, 0x74, 0x65, 0x4d, 0x65,
	0x61, 0x6c, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x1c, 0x2e, 0x6d, 0x65, 0x61, 0x6c,
	0x73, 0x2e, 0x76, 0x31, 0x2e, 0x43, 0x72, 0x65, 0x61, 0x74, 0x65, 0x4d, 0x65, 0x61, 0x6c, 0x52,
	0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x12, 0x47, 0x0a, 0x0a, 0x44, 0x65, 0x6c, 0x65, 0x74,
	0x65, 0x4d, 0x65, 0x61, 0x6c, 0x12, 0x1b, 0x2e, 0x6d, 0x65, 0x61, 0x6c, 0x73, 0x2e, 0x76, 0x31,
	0x2e, 0x44, 0x65, 0x6c, 0x65, 0x74, 0x65, 0x4d, 0x65, 0x61, 0x6c, 0x52, 0x65, 0x71, 0x75, 0x65,
	0x73, 0x74, 0x1a, 0x1c, 0x2e, 0x6d, 0x65, 0x61, 0x6c, 0x73, 0x2e, 0x76, 0x31, 0x2e, 0x44, 0x65,
	0x6c, 0x65, 0x74, 0x65, 0x4d, 0x65, 0x61, 0x6c, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65,
	0x32, 0xcb, 0x01, 0x0a, 0x13, 0x50, 0x6c, 0x61, 0x6e, 0x6e, 0x65, 0x64, 0x4d, 0x65, 0x61, 0x6c,
	0x73, 0x73, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x12, 0x56, 0x0a, 0x0f, 0x47, 0x65, 0x74, 0x50,
	0x6c, 0x61, 0x6e, 0x6e, 0x65, 0x64, 0x4d, 0x65, 0x61, 0x6c, 0x73, 0x12, 0x20, 0x2e, 0x6d, 0x65,
	0x61, 0x6c, 0x73, 0x2e, 0x76, 0x31, 0x2e, 0x47, 0x65, 0x74, 0x50, 0x6c, 0x61, 0x6e, 0x6e, 0x65,
	0x64, 0x4d, 0x65, 0x61, 0x6c, 0x73, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x21, 0x2e,
	0x6d, 0x65, 0x61, 0x6c, 0x73, 0x2e, 0x76, 0x31, 0x2e, 0x47, 0x65, 0x74, 0x50, 0x6c, 0x61, 0x6e,
	0x6e, 0x65, 0x64, 0x4d, 0x65, 0x61, 0x6c, 0x73, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65,
	0x12, 0x5c, 0x0a, 0x11, 0x43, 0x72, 0x65, 0x61, 0x74, 0x65, 0x50, 0x6c, 0x61, 0x6e, 0x6e, 0x65,
	0x64, 0x4d, 0x65, 0x61, 0x6c, 0x12, 0x22, 0x2e, 0x6d, 0x65, 0x61, 0x6c, 0x73, 0x2e, 0x76, 0x31,
	0x2e, 0x43, 0x72, 0x65, 0x61, 0x74, 0x65, 0x50, 0x6c, 0x61, 0x6e, 0x6e, 0x65, 0x64, 0x4d, 0x65,
	0x61, 0x6c, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x23, 0x2e, 0x6d, 0x65, 0x61, 0x6c,
	0x73, 0x2e, 0x76, 0x31, 0x2e, 0x43, 0x72, 0x65, 0x61, 0x74, 0x65, 0x50, 0x6c, 0x61, 0x6e, 0x6e,
	0x65, 0x64, 0x4d, 0x65, 0x61, 0x6c, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x42, 0x9e,
	0x01, 0x0a, 0x0c, 0x63, 0x6f, 0x6d, 0x2e, 0x6d, 0x65, 0x61, 0x6c, 0x73, 0x2e, 0x76, 0x31, 0x42,
	0x0a, 0x4d, 0x65, 0x61, 0x6c, 0x73, 0x50, 0x72, 0x6f, 0x74, 0x6f, 0x50, 0x01, 0x5a, 0x41, 0x67,
	0x69, 0x74, 0x68, 0x75, 0x62, 0x2e, 0x63, 0x6f, 0x6d, 0x2f, 0x6b, 0x72, 0x69, 0x73, 0x34, 0x35,
	0x36, 0x2f, 0x6d, 0x65, 0x61, 0x6c, 0x77, 0x65, 0x65, 0x6b, 0x2d, 0x67, 0x6f, 0x2d, 0x62, 0x61,
	0x63, 0x6b, 0x65, 0x6e, 0x64, 0x2f, 0x67, 0x65, 0x6e, 0x2f, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x2f,
	0x6d, 0x65, 0x61, 0x6c, 0x73, 0x2f, 0x76, 0x31, 0x3b, 0x6d, 0x65, 0x61, 0x6c, 0x73, 0x76, 0x31,
	0xa2, 0x02, 0x03, 0x4d, 0x58, 0x58, 0xaa, 0x02, 0x08, 0x4d, 0x65, 0x61, 0x6c, 0x73, 0x2e, 0x56,
	0x31, 0xca, 0x02, 0x08, 0x4d, 0x65, 0x61, 0x6c, 0x73, 0x5c, 0x56, 0x31, 0xe2, 0x02, 0x14, 0x4d,
	0x65, 0x61, 0x6c, 0x73, 0x5c, 0x56, 0x31, 0x5c, 0x47, 0x50, 0x42, 0x4d, 0x65, 0x74, 0x61, 0x64,
	0x61, 0x74, 0x61, 0xea, 0x02, 0x09, 0x4d, 0x65, 0x61, 0x6c, 0x73, 0x3a, 0x3a, 0x56, 0x31, 0x62,
	0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
}

var (
	file_proto_meals_v1_meals_proto_rawDescOnce sync.Once
	file_proto_meals_v1_meals_proto_rawDescData = file_proto_meals_v1_meals_proto_rawDesc
)

func file_proto_meals_v1_meals_proto_rawDescGZIP() []byte {
	file_proto_meals_v1_meals_proto_rawDescOnce.Do(func() {
		file_proto_meals_v1_meals_proto_rawDescData = protoimpl.X.CompressGZIP(file_proto_meals_v1_meals_proto_rawDescData)
	})
	return file_proto_meals_v1_meals_proto_rawDescData
}

var file_proto_meals_v1_meals_proto_msgTypes = make([]protoimpl.MessageInfo, 12)
var file_proto_meals_v1_meals_proto_goTypes = []interface{}{
	(*GetMealsRequest)(nil),           // 0: meals.v1.GetMealsRequest
	(*GetMealsResponse)(nil),          // 1: meals.v1.GetMealsResponse
	(*CreateMealRequest)(nil),         // 2: meals.v1.CreateMealRequest
	(*CreateMealResponse)(nil),        // 3: meals.v1.CreateMealResponse
	(*DeleteMealRequest)(nil),         // 4: meals.v1.DeleteMealRequest
	(*DeleteMealResponse)(nil),        // 5: meals.v1.DeleteMealResponse
	(*Meal)(nil),                      // 6: meals.v1.meal
	(*GetPlannedMealsRequest)(nil),    // 7: meals.v1.GetPlannedMealsRequest
	(*GetPlannedMealsResponse)(nil),   // 8: meals.v1.GetPlannedMealsResponse
	(*CreatePlannedMealRequest)(nil),  // 9: meals.v1.CreatePlannedMealRequest
	(*CreatePlannedMealResponse)(nil), // 10: meals.v1.CreatePlannedMealResponse
	(*PlannedMeal)(nil),               // 11: meals.v1.PlannedMeal
	(*timestamppb.Timestamp)(nil),     // 12: google.protobuf.Timestamp
}
var file_proto_meals_v1_meals_proto_depIdxs = []int32{
	6,  // 0: meals.v1.GetMealsResponse.meals:type_name -> meals.v1.meal
	6,  // 1: meals.v1.CreateMealResponse.meal:type_name -> meals.v1.meal
	12, // 2: meals.v1.GetPlannedMealsRequest.from:type_name -> google.protobuf.Timestamp
	12, // 3: meals.v1.GetPlannedMealsRequest.to:type_name -> google.protobuf.Timestamp
	11, // 4: meals.v1.GetPlannedMealsResponse.plannedMeals:type_name -> meals.v1.PlannedMeal
	12, // 5: meals.v1.CreatePlannedMealRequest.date:type_name -> google.protobuf.Timestamp
	11, // 6: meals.v1.CreatePlannedMealResponse.plannedMeal:type_name -> meals.v1.PlannedMeal
	12, // 7: meals.v1.PlannedMeal.date:type_name -> google.protobuf.Timestamp
	6,  // 8: meals.v1.PlannedMeal.meal:type_name -> meals.v1.meal
	0,  // 9: meals.v1.MealsService.GetMeals:input_type -> meals.v1.GetMealsRequest
	2,  // 10: meals.v1.MealsService.CreateMeal:input_type -> meals.v1.CreateMealRequest
	4,  // 11: meals.v1.MealsService.DeleteMeal:input_type -> meals.v1.DeleteMealRequest
	7,  // 12: meals.v1.PlannedMealsservice.GetPlannedMeals:input_type -> meals.v1.GetPlannedMealsRequest
	9,  // 13: meals.v1.PlannedMealsservice.CreatePlannedMeal:input_type -> meals.v1.CreatePlannedMealRequest
	1,  // 14: meals.v1.MealsService.GetMeals:output_type -> meals.v1.GetMealsResponse
	3,  // 15: meals.v1.MealsService.CreateMeal:output_type -> meals.v1.CreateMealResponse
	5,  // 16: meals.v1.MealsService.DeleteMeal:output_type -> meals.v1.DeleteMealResponse
	8,  // 17: meals.v1.PlannedMealsservice.GetPlannedMeals:output_type -> meals.v1.GetPlannedMealsResponse
	10, // 18: meals.v1.PlannedMealsservice.CreatePlannedMeal:output_type -> meals.v1.CreatePlannedMealResponse
	14, // [14:19] is the sub-list for method output_type
	9,  // [9:14] is the sub-list for method input_type
	9,  // [9:9] is the sub-list for extension type_name
	9,  // [9:9] is the sub-list for extension extendee
	0,  // [0:9] is the sub-list for field type_name
}

func init() { file_proto_meals_v1_meals_proto_init() }
func file_proto_meals_v1_meals_proto_init() {
	if File_proto_meals_v1_meals_proto != nil {
		return
	}
	if !protoimpl.UnsafeEnabled {
		file_proto_meals_v1_meals_proto_msgTypes[0].Exporter = func(v interface{}, i int) interface{} {
			switch v := v.(*GetMealsRequest); i {
			case 0:
				return &v.state
			case 1:
				return &v.sizeCache
			case 2:
				return &v.unknownFields
			default:
				return nil
			}
		}
		file_proto_meals_v1_meals_proto_msgTypes[1].Exporter = func(v interface{}, i int) interface{} {
			switch v := v.(*GetMealsResponse); i {
			case 0:
				return &v.state
			case 1:
				return &v.sizeCache
			case 2:
				return &v.unknownFields
			default:
				return nil
			}
		}
		file_proto_meals_v1_meals_proto_msgTypes[2].Exporter = func(v interface{}, i int) interface{} {
			switch v := v.(*CreateMealRequest); i {
			case 0:
				return &v.state
			case 1:
				return &v.sizeCache
			case 2:
				return &v.unknownFields
			default:
				return nil
			}
		}
		file_proto_meals_v1_meals_proto_msgTypes[3].Exporter = func(v interface{}, i int) interface{} {
			switch v := v.(*CreateMealResponse); i {
			case 0:
				return &v.state
			case 1:
				return &v.sizeCache
			case 2:
				return &v.unknownFields
			default:
				return nil
			}
		}
		file_proto_meals_v1_meals_proto_msgTypes[4].Exporter = func(v interface{}, i int) interface{} {
			switch v := v.(*DeleteMealRequest); i {
			case 0:
				return &v.state
			case 1:
				return &v.sizeCache
			case 2:
				return &v.unknownFields
			default:
				return nil
			}
		}
		file_proto_meals_v1_meals_proto_msgTypes[5].Exporter = func(v interface{}, i int) interface{} {
			switch v := v.(*DeleteMealResponse); i {
			case 0:
				return &v.state
			case 1:
				return &v.sizeCache
			case 2:
				return &v.unknownFields
			default:
				return nil
			}
		}
		file_proto_meals_v1_meals_proto_msgTypes[6].Exporter = func(v interface{}, i int) interface{} {
			switch v := v.(*Meal); i {
			case 0:
				return &v.state
			case 1:
				return &v.sizeCache
			case 2:
				return &v.unknownFields
			default:
				return nil
			}
		}
		file_proto_meals_v1_meals_proto_msgTypes[7].Exporter = func(v interface{}, i int) interface{} {
			switch v := v.(*GetPlannedMealsRequest); i {
			case 0:
				return &v.state
			case 1:
				return &v.sizeCache
			case 2:
				return &v.unknownFields
			default:
				return nil
			}
		}
		file_proto_meals_v1_meals_proto_msgTypes[8].Exporter = func(v interface{}, i int) interface{} {
			switch v := v.(*GetPlannedMealsResponse); i {
			case 0:
				return &v.state
			case 1:
				return &v.sizeCache
			case 2:
				return &v.unknownFields
			default:
				return nil
			}
		}
		file_proto_meals_v1_meals_proto_msgTypes[9].Exporter = func(v interface{}, i int) interface{} {
			switch v := v.(*CreatePlannedMealRequest); i {
			case 0:
				return &v.state
			case 1:
				return &v.sizeCache
			case 2:
				return &v.unknownFields
			default:
				return nil
			}
		}
		file_proto_meals_v1_meals_proto_msgTypes[10].Exporter = func(v interface{}, i int) interface{} {
			switch v := v.(*CreatePlannedMealResponse); i {
			case 0:
				return &v.state
			case 1:
				return &v.sizeCache
			case 2:
				return &v.unknownFields
			default:
				return nil
			}
		}
		file_proto_meals_v1_meals_proto_msgTypes[11].Exporter = func(v interface{}, i int) interface{} {
			switch v := v.(*PlannedMeal); i {
			case 0:
				return &v.state
			case 1:
				return &v.sizeCache
			case 2:
				return &v.unknownFields
			default:
				return nil
			}
		}
	}
	type x struct{}
	out := protoimpl.TypeBuilder{
		File: protoimpl.DescBuilder{
			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
			RawDescriptor: file_proto_meals_v1_meals_proto_rawDesc,
			NumEnums:      0,
			NumMessages:   12,
			NumExtensions: 0,
			NumServices:   2,
		},
		GoTypes:           file_proto_meals_v1_meals_proto_goTypes,
		DependencyIndexes: file_proto_meals_v1_meals_proto_depIdxs,
		MessageInfos:      file_proto_meals_v1_meals_proto_msgTypes,
	}.Build()
	File_proto_meals_v1_meals_proto = out.File
	file_proto_meals_v1_meals_proto_rawDesc = nil
	file_proto_meals_v1_meals_proto_goTypes = nil
	file_proto_meals_v1_meals_proto_depIdxs = nil
}
